Updated. Maybe Works.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 .RData
 .Ruserdata
 .DS_Store
+plharvey_15/.DS_Store
+plharvey_15/.DS_Store
+.vscode/settings.json
+telescope.csv
+lattice_n_100.png
+.ipynb_checkpoints/Flat_Lattice-checkpoint.ipynb
+plharvey_17/lattice.ipynb
