--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ telescope.csv
 lattice_n_100.png
 .ipynb_checkpoints/Flat_Lattice-checkpoint.ipynb
 plharvey_17/lattice.ipynb
+lattice_1.png
+lattice_1.png
